--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "homepage": "https://github.com/sebb94/cypress_practice_1#readme",
   "dependencies": {
     "cypress": "^5.0.0",
+    "cypress-file-upload": "^4.1.1",
+    "mocha": "^8.1.3",
+    "mochawesome": "^6.1.1",
+    "mochawesome-merge": "^4.1.0",
     "prettier": "^2.1.1"
   },
   "devDependencies": {
